[FIX] grid: wrong z-index for grid elements
With the new dark mode for the grid, the canvas is applied a css `filter`
property. This creates a new stacking context for the canvas, so
elements that were previously above it were now below it. Some
`z-index` values were added, but they were missing for some elements.

- Added a css variable for the grid overlay `z-index`
- Added `z-index` to autofill and table resizer so they are at the same
level as the grid overlay.
- `Add row footer` button `z-index` was useless since it's a child of the
grid overlay
- Highlight had a custom `z-index` ... which was not applied since
the highlight element had `position: static`. The `z-index`
should be applied to its children.

Task: 0

--- a/src/components/tables/table_resizer/table_resizer.css
+++ b/src/components/tables/table_resizer/table_resizer.css
@@ -5,5 +5,6 @@
     border-bottom: 3px solid var(--os-gray-500);
     border-right: 3px solid var(--os-gray-500);
     cursor: nwse-resize;
+    z-index: var(--os-components-importance-grid-overlay);
   }
 }
